# schilliger-bot

./: Cargo.toml
src/: main.rs
src/commands/: voice.rs
src/config/: mod.rs  settings.rs
src/date/: date.rs  mod.rs
