[package]
name = "schilliger-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.79"
async-trait = "0.1.52"
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice", "standard_framework", "cache"]

[dependencies.songbird]
version = "0.2.2"
features = ["serenity", "gateway-core", "driver", "driver-core"]