[package]
name = "schilliger-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.79"
async-trait = "0.1.52"
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"
rand_xorshift = "0.3.0"
dashmap = "5.5.3"
reqwest = "0.11.26"
lazy_static = "1.4.0"
poise = "0.6.1"
derive_more = "0.99.17"
symphonia = { version = "0.5.2", features = ['pcm','mp3','wav','isomp4','aac','alac'] }

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice", "standard_framework", "cache"]

[dependencies.songbird]
version = "0.4.1"
features = ["serenity", "driver"]
